@@ -3,6 +3,8 @@
     "DB_ENV->mutex_get_align()".
   * Support for "DB_ENV->mutex_set_increment()" and
     "DB_ENV->mutex_get_increment()".
+  * Support for "DB_ENV->mutex_set_tas_spins()" and
+    "DB_ENV->mutex_get_tas_spins()".
 
 4.8.0:
   * Support for Berkeley DB 4.8.
